--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.21.1",
+    "mysql2": "^3.11.5",
     "socket.io": "^4.8.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
