--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "mysql2": "^3.11.5",
+    "node": "^22.12.0",
+    "path": "^0.12.7",
+    "socket.io": "^4.8.1"
+  }
 }
