--- a/backend/environment/.env.exemple
+++ b/backend/environment/.env.exemple
@@ -4,4 +4,8 @@ DB_USER=root
 DB_PASS=
 DB_NAME=tr2_mentoria
 
+EMAIL_USER= 'a21adrvazvaz@inspedralbes.cat',
+EMAIL_PASS= 'csaa wbfh pass sfzt'
+
+
 PORT=3000
