--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "http": "^0.0.1-security",
     "mysql2": "^3.11.5",
     "node": "^22.12.0",
+    "nodemailer": "^6.9.16",
     "path": "^0.12.7",
     "socket.io": "^4.8.1"
   }
