--- a/web/vuetify/package.json
+++ b/web/vuetify/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
@@ -29,7 +31,7 @@
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
-    "vite": "^5.4.0",
+    "vite": "^5.4.11",
     "vite-plugin-vuetify": "^2.0.3",
     "vue-router": "^4.4.0"
   }
