--- a/web/vuetify/package.json
+++ b/web/vuetify/package.json
@@ -14,6 +14,8 @@
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "roboto-fontface": "*",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
   },
