pass de emailer

--- a/backend/environment/.env.exemple
+++ b/backend/environment/.env.exemple
@@ -5,7 +5,7 @@ DB_PASS=root
 DB_NAME=tr2_mentoria
 
 EMAIL_USER= 'a21adrvazvaz@inspedralbes.cat',
-EMAIL_PASS= 'csaa wbfh pass sfzt'
+EMAIL_PASS= 'adkh ezav xrxc fggs'
 
 
 PORT=3000
