--- a/backend/environment/.env.exemple
+++ b/backend/environment/.env.exemple
@@ -4,6 +4,10 @@ DB_USER=tr2
 DB_PASS=root
 DB_NAME=tr2_mentoria
 
+MGDB_USER=tr2mentoria
+MGDB_PASS=tr2mentoriaG5
+MGDB_CONNECTION= mongodb+srv://tr2mentoria:<tr2mentoriaG5>@cluster0.c00de.mongodb.net/mentoriaG5?retryWrites=true&w=majority&appName=Cluster0
+
 EMAIL_USER= 'a21adrvazvaz@inspedralbes.cat',
 EMAIL_PASS= 'adkh ezav xrxc fggs'
 
