--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,14 @@
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.4",
+    "moongose": "^1.0.0",
     "mysql2": "^3.12.0",
     "node": "^22.12.0",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
+    "router": "^1.3.8",
     "socket.io": "^4.8.1"
   }
 }
