FUNCION DE ENVIAR CORREO PARA RESTAURAR CONTRASEÑA DONE

--- a/backend/environment/.env.exemple
+++ b/backend/environment/.env.exemple
@@ -4,8 +4,8 @@ DB_USER=tr2
 DB_PASS=root
 DB_NAME=tr2_mentoria
 
-EMAIL_USER= 'a21adrvazvaz@inspedralbes.cat',
-EMAIL_PASS= 'adkh ezav xrxc fggs'
+EMAIL_USER= a21adrvazvaz@inspedralbes.cat
+EMAIL_PASS= adkh ezav xrxc fggs
 
 
 PORT=3000
