env cambiando para el prod

--- a/backend/environment/.env.PROD
+++ b/backend/environment/.env.PROD
@@ -1,6 +1,7 @@
 DB_NAMEPROD=a23edstorcev_TR2_MENTORIA
-DB_HOSTPROD=dam.inspedralbes.cat
+DB_HOSTPROD=localhost
 DB_USERPROD=a23edstorcev_user
 DB_PASSPROD=InstitutPedralbes_2024
+DB_PORTPROD=3306
 
-DB_PORTPROD=23412
+PORTPROD=23412
