--- a/web/vuetify/.env
+++ b/web/vuetify/.env
@@ -1,2 +1,2 @@
-VITE_URL_BACK=http://localhost:3000/
-# VITE_URL_BACK=""
+VITE_URL_BACK=http://tr2g5.dam.inspedralbes.cat:23412/
+# VITE_URL_BACK="http://localhost:3000" "http://tr2g5.dam.inspedralbes.cat:23412/""  sin comillas dentro de la variable
