Actualizar contraseña si te has olvidado

--- a/backend/environment/.env.exemple
+++ b/backend/environment/.env.exemple
@@ -4,6 +4,9 @@ DB_USER=tr2
 DB_PASS=root
 DB_NAME=tr2_mentoria
 
+URL_BACK=http://localhost:3000
+
+
 EMAIL_USER= a21adrvazvaz@inspedralbes.cat
 EMAIL_PASS= adkh ezav xrxc fggs
 
